modules/lib/src/main/java/com/github/auties00/cobalt/call/transport/sctp/bindings/UsrSctp.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void usrsctp_init_nothreads(uint16_t, int (*)(void *, void *, size_t, uint8_t, uint8_t), void (*)(const char *))
     * }
     */
    public static MethodHandle usrsctp_init_nothreads$handle() {
        return usrsctp_init_nothreads.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void usrsctp_init_nothreads(uint16_t, int (*)(void *, void *, size_t, uint8_t, uint8_t), void (*)(const char *))
     * }
     */
    public static MemorySegment usrsctp_init_nothreads$address() {
        return usrsctp_init_nothreads.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void usrsctp_init_nothreads(uint16_t, int (*)(void *, void *, size_t, uint8_t, uint8_t), void (*)(const char *))
     * }
     */
    public static void usrsctp_init_nothreads(short x0, MemorySegment x1, MemorySegment x2) {
        var mh$ = usrsctp_init_nothreads.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_init_nothreads", x0, x1, x2);
            }
            mh$.invokeExact(x0, x1, x2);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_socket {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_POINTER,
            UsrSctp.C_INT,
            UsrSctp.C_INT,
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT,
            UsrSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_socket");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct socket *usrsctp_socket(int domain, int type, int protocol, int (*receive_cb)(struct socket *, union sctp_sockstore, void *, size_t, struct sctp_rcvinfo, int, void *), int (*send_cb)(struct socket *, uint32_t, void *), uint32_t sb_threshold, void *ulp_info)
     * }
     */
    public static FunctionDescriptor usrsctp_socket$descriptor() {
        return usrsctp_socket.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct socket *usrsctp_socket(int domain, int type, int protocol, int (*receive_cb)(struct socket *, union sctp_sockstore, void *, size_t, struct sctp_rcvinfo, int, void *), int (*send_cb)(struct socket *, uint32_t, void *), uint32_t sb_threshold, void *ulp_info)
     * }
     */
    public static MethodHandle usrsctp_socket$handle() {
        return usrsctp_socket.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct socket *usrsctp_socket(int domain, int type, int protocol, int (*receive_cb)(struct socket *, union sctp_sockstore, void *, size_t, struct sctp_rcvinfo, int, void *), int (*send_cb)(struct socket *, uint32_t, void *), uint32_t sb_threshold, void *ulp_info)
     * }
     */
    public static MemorySegment usrsctp_socket$address() {
        return usrsctp_socket.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct socket *usrsctp_socket(int domain, int type, int protocol, int (*receive_cb)(struct socket *, union sctp_sockstore, void *, size_t, struct sctp_rcvinfo, int, void *), int (*send_cb)(struct socket *, uint32_t, void *), uint32_t sb_threshold, void *ulp_info)
     * }
     */
    public static MemorySegment usrsctp_socket(int domain, int type, int protocol, MemorySegment receive_cb, MemorySegment send_cb, int sb_threshold, MemorySegment ulp_info) {
        var mh$ = usrsctp_socket.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_socket", domain, type, protocol, receive_cb, send_cb, sb_threshold, ulp_info);
            }
            return (MemorySegment)mh$.invokeExact(domain, type, protocol, receive_cb, send_cb, sb_threshold, ulp_info);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_setsockopt {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT,
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_setsockopt");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int usrsctp_setsockopt(struct socket *so, int level, int option_name, const void *option_value, socklen_t option_len)
     * }
     */
    public static FunctionDescriptor usrsctp_setsockopt$descriptor() {
        return usrsctp_setsockopt.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int usrsctp_setsockopt(struct socket *so, int level, int option_name, const void *option_value, socklen_t option_len)
     * }
     */
    public static MethodHandle usrsctp_setsockopt$handle() {
        return usrsctp_setsockopt.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int usrsctp_setsockopt(struct socket *so, int level, int option_name, const void *option_value, socklen_t option_len)
     * }
     */
    public static MemorySegment usrsctp_setsockopt$address() {
        return usrsctp_setsockopt.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int usrsctp_setsockopt(struct socket *so, int level, int option_name, const void *option_value, socklen_t option_len)
     * }
     */
    public static int usrsctp_setsockopt(MemorySegment so, int level, int option_name, MemorySegment option_value, int option_len) {
        var mh$ = usrsctp_setsockopt.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_setsockopt", so, level, option_name, option_value, option_len);
            }
            return (int)mh$.invokeExact(so, level, option_name, option_value, option_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_getsockopt {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT,
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_getsockopt");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int usrsctp_getsockopt(struct socket *so, int level, int option_name, void *option_value, socklen_t *option_len)
     * }
     */
    public static FunctionDescriptor usrsctp_getsockopt$descriptor() {
        return usrsctp_getsockopt.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int usrsctp_getsockopt(struct socket *so, int level, int option_name, void *option_value, socklen_t *option_len)
     * }
     */
    public static MethodHandle usrsctp_getsockopt$handle() {
        return usrsctp_getsockopt.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int usrsctp_getsockopt(struct socket *so, int level, int option_name, void *option_value, socklen_t *option_len)
     * }
     */
    public static MemorySegment usrsctp_getsockopt$address() {
        return usrsctp_getsockopt.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int usrsctp_getsockopt(struct socket *so, int level, int option_name, void *option_value, socklen_t *option_len)
     * }
     */
    public static int usrsctp_getsockopt(MemorySegment so, int level, int option_name, MemorySegment option_value, MemorySegment option_len) {
        var mh$ = usrsctp_getsockopt.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_getsockopt", so, level, option_name, option_value, option_len);
            }
            return (int)mh$.invokeExact(so, level, option_name, option_value, option_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_sendv {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_LONG_LONG,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_LONG_LONG,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT,
            UsrSctp.C_POINTER,
            UsrSctp.C_INT,
            UsrSctp.C_INT,
            UsrSctp.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_sendv");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * ssize_t usrsctp_sendv(struct socket *so, const void *data, size_t len, struct sockaddr *to, int addrcnt, void *info, socklen_t infolen, unsigned int infotype, int flags)
     * }
     */
    public static FunctionDescriptor usrsctp_sendv$descriptor() {
        return usrsctp_sendv.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * ssize_t usrsctp_sendv(struct socket *so, const void *data, size_t len, struct sockaddr *to, int addrcnt, void *info, socklen_t infolen, unsigned int infotype, int flags)
     * }
     */
    public static MethodHandle usrsctp_sendv$handle() {
        return usrsctp_sendv.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * ssize_t usrsctp_sendv(struct socket *so, const void *data, size_t len, struct sockaddr *to, int addrcnt, void *info, socklen_t infolen, unsigned int infotype, int flags)
     * }
     */
    public static MemorySegment usrsctp_sendv$address() {
        return usrsctp_sendv.ADDR;
    }

    /**
     * {@snippet lang=c :
     * ssize_t usrsctp_sendv(struct socket *so, const void *data, size_t len, struct sockaddr *to, int addrcnt, void *info, socklen_t infolen, unsigned int infotype, int flags)
     * }
     */
    public static long usrsctp_sendv(MemorySegment so, MemorySegment data, long len, MemorySegment to, int addrcnt, MemorySegment info, int infolen, int infotype, int flags) {
        var mh$ = usrsctp_sendv.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("usrsctp_sendv", so, data, len, to, addrcnt, info, infolen, infotype, flags);
            }
            return (long)mh$.invokeExact(so, data, len, to, addrcnt, info, infolen, infotype, flags);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class usrsctp_recvv {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            UsrSctp.C_LONG_LONG,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_LONG_LONG,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER,
            UsrSctp.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("usrsctp_recvv");
